--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@popperjs/core": "^2.11.3",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "pinia": "^2.0.12",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
